tests/mm0_mmu/fail/bad-sort423.mmu
-- bad modifier order
(sort s423 free strict provable)